--- a/index.html
+++ b/index.html
@@ -568,12 +568,12 @@
               <input
                 class="modal-contacts-input"
                 type="text"
-                name="user_name"
+                name="user-name"
                 required
                 id="user-name"
               />
               <svg class="contacts-form-input-icon" width="18" height="24">
-                <use href="/images/icons.svg#icon-man"></use>
+                <use href="./images/icons.svg#icon-man"></use>
               </svg>
             </div>
           </div>
@@ -590,7 +590,7 @@
                 required
               />
               <svg class="contacts-form-input-icon" width="18" height="24">
-                <use href="/images/icons.svg#icon-phone"></use>
+                <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
           </div>
@@ -606,7 +606,7 @@
                   id="modal-user-mail"
                 />
                 <svg class="contacts-form-input-icon" width="18" height="24">
-                  <use href="/images/icons.svg#icon-mail"></use>
+                  <use href="./images/icons.svg#icon-mail"></use>
                 </svg> </div>
             
           </div>
@@ -635,13 +635,15 @@
             <label
               class="modal-contacts-checkbox-wrapper"
               for="user-privacy"
-            >
-            <svg class="modal-contacts-custom-checkbox" width="16" height="16">
-              <use
-                class="modal-contacts-custom-icon"
-                href="./images/icons.svg#icon-checked"
-              ></use>
-            </svg>
+            ><span class="modal-contacts-custom-checkbox-wrapper">
+              <svg class="modal-contacts-custom-checkbox" width="10" height="8">
+                <use
+                  class="modal-contacts-custom-icon"
+                  href="./images/icons.svg#icon-checked"
+                ></use>
+              </svg>
+            </span>
+            
               I accept the terms and conditions of the
                 <a href="" class="modal-private-policy-link link"
                   >Privacy Policy</a
