--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
             <input
               class="modal-contacts-checkbox visually-hidden"
               type="checkbox"
-              name="user_privacyy"
+              name="user-privacy"
               required
               id="user-privacy"
               value="true"
